tests/reference/asr-implicit7-99b4b21.stderr
semantic error: Implicit typing is not allowed, enable it by using --implicit-typing 
 --> tests/implicit7.f90:2:1
  |
2 | implicit real (n)
  | ^^^^^^^^^^^^^^^^^^ 
